<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DonateBooksActivity"
    tools:showIn="@layout/activity_donate_books">


    <LinearLayout
        android:id="@+id/header_"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="6dp"
        android:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        tools:targetApi="lollipop"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/back_layout_donate_books"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@drawable/back_image_"
                android:contentDescription="@string/todo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donateBooks"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/header_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Spinner
                android:id="@+id/syllabus_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:textColor="@color/colorBlack"
                android:gravity="center"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/spinner_svg"
                android:contentDescription="@string/todo"/>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E7E8"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <com.credoapp.parent.common.MultiSelectSpinner
                android:id="@+id/classes_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:textColor="@color/colorBlack"
                android:gravity="center"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/spinner_svg"
                android:contentDescription="@string/todo"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E7E8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/description"/>

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_margin="2dp"-->
        <!--android:background="@drawable/description_of_books_back"-->
        <!--android:layout_marginBottom="10dp">-->
        <!--<EditText-->
        <!--android:id="@+id/edit_text_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:background="@null"-->
        <!--android:layout_marginStart="5dp"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--tools:ignore="LabelFor" />-->

        <!--</RelativeLayout>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@drawable/description_of_books_back"
            android:layout_marginBottom="2dp">
            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@null"
                android:layout_marginStart="5dp"
                android:gravity="top"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorBlack"
                tools:ignore="LabelFor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_toEndOf="@+id/dummy_donate_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/free_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/free"/>
                <RadioButton
                    android:id="@+id/cash_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/paid"/>

            </RadioGroup>
            <TextView
                android:id="@+id/dummy_donate_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:text="@string/donateFor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/dummy_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:text="@string/amount"/>
            <LinearLayout
                android:layout_toEndOf="@+id/dummy_amount_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                  
                android:layout_marginStart="5dp"
                android:layout_margin="2dp"
                android:gravity="center_vertical"
                android:background="@drawable/description_of_books_back">
                <EditText
                    android:id="@+id/edit_text_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:layout_marginStart="7dp"
                    android:gravity="center_vertical"
                    android:maxLength="6"
                    android:background="@null"
                    tools:ignore="LabelFor"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_layout_amount_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/dummy_amount_text_free"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:text="@string/other_amount"/>
            <LinearLayout
                android:layout_toEndOf="@+id/dummy_amount_text_free"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                  
                android:layout_marginStart="5dp"
                android:layout_margin="2dp"
                android:gravity="center_vertical"
                android:background="@drawable/description_of_books_back">
                <EditText
                    android:id="@+id/edit_text_amount_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:layout_marginStart="7dp"
                    android:gravity="center_vertical"
                    android:maxLength="6"
                    android:background="@null"
                    tools:ignore="LabelFor"
                    android:layout_marginLeft="7dp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/bookPicTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="5dp"
                android:hint="Upload Book pic(Optional)"
                android:gravity="center_vertical"
                android:layout_marginStart="5dp"/>

            <Button
                android:id="@+id/chooseBookPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                android:text="@string/choose_file"
                android:textColor="@color/colorWhite"
                android:background="@drawable/next_background"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_submit_donate_books"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:visibility="gone"
        android:id="@+id/button_update_donate_books"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"/>

</RelativeLayout>